--- a/src/main/resources/templates/nomination-promotion/frm-nomination-unite-admin-frag.html
+++ b/src/main/resources/templates/nomination-promotion/frm-nomination-unite-admin-frag.html
@@ -3,34 +3,36 @@
     <head><meta charset="UTF-8"/></head>
     <body>
 		<th:block th:fragment="frm-nomination-unite-admin-frag">
-            <form id="frm-unite-admin" th:object="${nomination}" th:action="@{/staffadmin/saf/nomination/save}" method="post" enctype="multipart/form-data">
-				<div class="col col-lg-8">
+            <form id="frm-unite-admin" th:object="${nomination}" th:action="@{/staffadmin/nomination/confirmation}" method="post" enctype="multipart/form-data">
+				<div class="col col-lg-6">
                     <div class="form-group ">
-                        <label for="titre">Matricule de l'agent</label>
+                        <label for="titre">Matricule de l'agent</label> <span id="matricule-error-msg" class="error-msg">*Matricule inexistant</span>
                         <input required="required" th:field="*{agentNomme.matricule}" type="text" class="form-control" id="matricule" placeholder="Matricule">
                     </div>
+                </div>
 
+                <div class="col col-lg-6">
                     <div class="form-group ">
                         <label for="titre">Titre</label>
-                        <input required="required" th:field="*{titreNomination}" type="text" class="form-control" id="titre" placeholder="Titre">
+                        <select required="required" th:field="*{titreNomination}" class="form-control">
+                        	<option value=""></option>
+                        	<option th:each="titre:${titres}" th:text="${titre}" th:value="${titre}"></option>
+                        </select>
+<!--                         <input required="required" th:field="*{titreNomination}" type="text" class="form-control" id="titre" placeholder="Titre"> -->
                     </div>
-
-
-                                    
+                </div>
+                              
+                <div class="col col-lg-6">
                     <div class="form-group">
                         <label for="dateNomination">Date de nomination</label>
-                        <input th:field="*{dateNomination}" type="date" class="form-control" id="dateNomination" placeholder="Date de nomination">
+                        <input required th:field="*{dateNomination}" type="date" class="form-control" id="dateNomination" placeholder="Date de nomination">
                     </div>                                    
                 </div>
 
-                <div class="col col-lg-4">
-                    <p class="centered"><img src="#" id="photo" class="img-circle" height="80" width="80"></p>
-                    <h5 class="centered"><span id="agentInfos"></span></h5>
-                    
-               </div> 
+
                                   
 
-				<div class="col col-lg-8">
+				<div class="col col-lg-6">
                     <div class="form-group">
                         <label for="idFonction">Fonction</label>
                         <select required="required" th:field="*{fonctionNomination.idFonction}" class="form-control" id="idFonction">
@@ -44,19 +46,21 @@
                     <div class="form-group">
                         <label for="idUniteAdminDeNomination">Unité administrative</label>
                         <input disabled  th:value="${nomination.uniteAdminDeNomination.appellation + ' (' + nomination.uniteAdminDeNomination.sigle + ')'}" class="form-control"/>
-                        <input   th:field="*{uniteAdminDeNomination.idUniteAdmin}"  id="idUniteAdminDeNomination"/>
+                        <input  type="hidden"  th:field="*{uniteAdminDeNomination.idUniteAdmin}"  id="idUniteAdminDeNomination"/>
                     </div>
                 </div>
                                                
-                <div class="col col-lg-12">
+<!--                 <div class="col col-lg-4">
                     <div class="form-group">
                         <label for="acteNominationFile">Acte de nomination</label>
-                        <input required th:field="*{acteNominationFile}"  type="file" class="form-control-file" id="acteNominationFile">
+                        <input th:field="*{acteNominationFile}"  type="file" class="form-control-file" id="acteNominationFile"/>
                     </div>
-                </div>   
+                </div>    -->
                 
                 <div class="col col-lg-offset-8 col-lg-4">
-                    <button id="btnEnregistrer" class="btn green-btn pull-right" style="margin: 5px;" type="submit">Enregistrer</button>
+                    <button id="btnEnregistrer" class="btn green-btn pull-right" style="margin: 5px;" type="submit">
+                        Poursuivre <i class="glyphicon glyphicon-hand-right"></i>
+                    </button>
 	                <button class="btn btn-default pull-right" style="margin: 5px;" type="reset">Annuler</button> 	                    
 	           </div>  
             </form>
