--- a/src/main/resources/templates/user/docs-admins-frag.html
+++ b/src/main/resources/templates/user/docs-admins-frag.html
@@ -9,19 +9,13 @@
 
 	<th:block th:fragment="docs-admins-frag">
 			    		
-                        <div class="col-lg-12">
-					    	<div  class="panel orange-panel">
+                        <div class="main-content-block-item">
+					    	<div  class="panel panel-primary">
 					    		<div class="panel-heading">
 					    			<h3 class="panel-title"><a href="#docs-admins" data-toggle="collapse">Documents administratifs</a></h3>
 					    		</div>	
-					    		<div class="list-group panel-collapse collapse" id="docs-admins" >			    	
-						    		<li class="list-group-item"> Ministère : <span class="badge" th:text="${visitedUser.agent.fixeBureau}"></span></li>
-						    		<li class="list-group-item"> Structure : <span class="badge" th:text="${visitedUser.agent.matricule}"></span></li>
-						    		<li class="list-group-item"> Fonction : <span class="badge" th:text="${visitedUser.agent.sexe}"></span></li>
-						    		<li class="list-group-item"> Matricule : <span class="badge" th:text="${visitedUser.agent.dateNaissance}"></span></li>
-						    		<li class="list-group-item"> Type de pièce : <span class="badge" th:text="${visitedUser.agent.typePiece}"></span></li>
-						    		<li class="list-group-item"> N° de pièce : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
-						    		<li class="list-group-item"> Type d'abonné : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
+					    		<div class="panel-body panel-collapse collapse" id="docs-admins" >			    	
+						    		
 					    		</div>
 					    	</div>	
 					    </div>	
