--- a/src/main/resources/templates/fragments/layout/top-bar-frag.html
+++ b/src/main/resources/templates/fragments/layout/top-bar-frag.html
@@ -10,7 +10,7 @@
                     <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
                 </div>
           <!--logo start-->
-                <a href="index.html" class="logo"><b>ADMINISTRATION DU PERSONNEL</b></a>
+                <a href="/staffadmin/unites-admins/1" class="logo"><b>ADMINISTRATION DU PERSONNEL</b></a>
           <!--logo end-->
                 <div class="nav notify-row" id="top_menu">
                     <!--  notification start -->
