--- a/src/main/resources/templates/user/infos-personnelles-frag.html
+++ b/src/main/resources/templates/user/infos-personnelles-frag.html
@@ -9,7 +9,7 @@
 
 	<th:block th:fragment="infos-personnelles-frag">
 			    	
-			    		<div class="col-lg-12">
+			    		<div class="main-content-block-item" style="margin-left: 0px;">
 					    	<div class="panel orange-panel">
 					    		<div class="panel-heading">
 					    			<h3 class="panel-title"><a href="#infos-personnelles" data-toggle="collapse">Informations personnelles</a></h3>
