--- a/src/main/resources/templates/user/infos-professionnelles-frag.html
+++ b/src/main/resources/templates/user/infos-professionnelles-frag.html
@@ -9,19 +9,17 @@
 
 	<th:block th:fragment="infos-professionnelles-frag">
 			    	
-					    <div class="col-lg-12" id = "infos">
+					    <div class="main-content-block-item" id = "infos">
 					    	<div  class="panel orange-panel">
 					    		<div class="panel-heading">
 					    			<h3 class="panel-title"><a href="#infos-professionnelles" data-toggle="collapse"> Informations professionnelles</a></h3>
 					    		</div>	
 					    		<div class="list-group panel-collapse collapse" id="infos-professionnelles" >			    	
-						    		<li class="list-group-item"> Ministère : <span class="badge" th:text="${visitedUser.agent.fixeBureau}"></span></li>
-						    		<li class="list-group-item"> Structure : <span class="badge" th:text="${visitedUser.agent.matricule}"></span></li>
-						    		<li class="list-group-item"> Fonction : <span class="badge" th:text="${visitedUser.agent.sexe}"></span></li>
-						    		<li class="list-group-item"> Matricule : <span class="badge" th:text="${visitedUser.agent.dateNaissance}"></span></li>
-						    		<li class="list-group-item"> Type de pièce : <span class="badge" th:text="${visitedUser.agent.typePiece}"></span></li>
-						    		<li class="list-group-item"> N° de pièce : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
-						    		<li class="list-group-item"> Type d'abonné : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
+						    		<li class="list-group-item"> Structure :  <a class="pull-right" th:href="@{'/staffadmin/unites-admins/' + ${visitedUser.agent.tutelleDirecte.idUniteAdmin}}"><span class="badge" th:text="${visitedUser.agent.tutelleDirecte}"></span></a></li>
+						    		<li class="list-group-item"> Fonction : <span class="badge" th:text="${visitedUser.agent.fonction.nomFonction}"></span></li>
+						    		<li class="list-group-item"> Matricule : <span class="badge" th:text="${visitedUser.agent.matricule}"></span></li>
+						    		<li class="list-group-item"> Emploi : <span class="badge" th:text="${visitedUser.agent.emploi.nomEmploi}"></span></li>
+						    		<li class="list-group-item"> Grade : <span class="badge" th:text="${visitedUser.agent.grade.nomGrade}"></span></li>
 					    		</div>
 					    	</div>	
 					    </div>
