--- a/src/main/resources/templates/unite-admin/single/list-sub-unites-admins-frag.html
+++ b/src/main/resources/templates/unite-admin/single/list-sub-unites-admins-frag.html
@@ -12,7 +12,7 @@
 				<div class="panel-heading">
 					<h3 class="panel-title"><a href="#list-sub-unites-admins" data-toggle="collapse">Listes des unités administratives sous tutelle</a></h3>
 				</div>
-				<div id = "list-sub-unites-admins" class=" panel-body panel-collapse collapse">
+				<div id = "list-sub-unites-admins" class=" panel-body panel-collapse collapse in">
 					<table class="table table-striped" id="sub-unites-admins-table">
 						<thead>
 							<tr>
