--- a/src/main/resources/templates/agent/frm/infos-emploi-frag.html
+++ b/src/main/resources/templates/agent/frm/infos-emploi-frag.html
@@ -10,18 +10,13 @@
         <div class="panel panel-default">
             <div class="panel-heading"><a href="#infos-emploi" data-toggle="collapse">Informations liées à l'emploi</a></div>
             <div class="panel-body panel-collapse collapse in" id="infos-emploi">
+
                 <div class="col col-lg-3">
-                    <div class="form-group">
-                        <label for="matricule">Matricule</label> <span class="error-msg text-danger" id="matricule-error-msg"></span>
-                        <input id="matricule" name="matricule" class="form-control" type="text" th:field="*{matricule}" />
-                    </div>
-                </div>
-                <div class="col col-lg-4">
                     <div class="form-group">
                         <label for="fonction">Fonction</label>
                         <span class="error-msg text-danger" id="fonction-error-msg"></span>
                         <select name="nomFonction" id="fonction" class="form-control" required="required" th:field="*{fonction.idFonction}">
-                                <option value="0" ></option>
+                                <option value="" ></option>
                                 <option th:each="f:${fonctions}" th:value="${f.idFonction}" th:text="${f.nomFonction}"></option>
 
                         </select>
@@ -34,13 +29,28 @@
                         <span class="error-msg text-danger" id="emploi-error-msg"></span>
 
                         <select name="nomEmploi" id="emploi" class="form-control" required="required"  th:field="*{emploi.idEmploi}">                    
-                                <option value="0"></option>
+                                <option value=""></option>
                                 <option th:each="e:${emplois}" th:value="${e.idEmploi}" th:text="${e.nomEmploi}"></option>
                         </select>
+                    </div>
+                </div>  
+                
+                <div class="col col-lg-3">
+                    <div class="form-group">
+                        <label for="matricule">Matricule</label> <span class="error-msg text-danger" id="matricule-error-msg"></span>
+                        <input id="matricule" name="matricule" class="form-control" type="text" th:field="*{matricule}" />
                     </div>
                 </div>                
                 
                 <div class="col col-lg-3">
+                    <div class="form-group">
+                        <label for="datePriseService1">1ère prise de service</label>
+                        <input type="date" class="form-control" id="datePriseService1" name="datePriseService1" th:field="*{datePriseService1}" />
+                        <span class="error-msg text-danger" id="datePriseService1-error-msg"></span>
+                    </div>
+                </div>                              
+                
+                <div class="col col-lg-4">
                     <div class="form-group">
                         <label for="grade">Grade</label>
                         <span class="error-msg text-danger" id="grade-error-msg"></span>
@@ -50,13 +60,19 @@
                         </select>
                     </div>
                 </div>
+                
                 <div class="col col-lg-4">
                     <div class="form-group">
-                        <label for="datePriseService1">1ère prise de service</label>
-                        <input type="date" class="form-control" id="datePriseService1" name="datePriseService1" th:field="*{datePriseService1}" />
-                        <span class="error-msg text-danger" id="datePriseService1-error-msg"></span>
+                        <label for="statutAgent">Statut de l'agent</label>
+                        <span class="error-msg text-danger" id="statutAgent-error-msg"></span>
+                        <select name="statutAgent" id="statutAgent" class="form-control" required="required" th:field="*{statutAgent}">
+                                <option value="Fonctionnaire">Fonctionnaire</option>
+                                <option value="Contractuel">Contractuel</option>
+                        </select>
                     </div>
                 </div>
+                                
+
 
 
             </div>
