--- a/src/main/resources/templates/agent/frm/infos-generales-frag.html
+++ b/src/main/resources/templates/agent/frm/infos-generales-frag.html
@@ -33,7 +33,7 @@
 	                        <select id="sexe" class="form-control" required="required" th:field="*{sexe}">
 	                        	<option value="0"></option>
 	                        	<option value="M">M</option>
-	                        	<option value="FEMININ">F</option>
+	                        	<option value="F">F</option>
 	                        </select>
                         </div>                    
                     </div>  
