--- a/src/main/resources/templates/unite-admin/single/list-personnel-frag.html
+++ b/src/main/resources/templates/unite-admin/single/list-personnel-frag.html
@@ -8,7 +8,7 @@
 				<div class="panel-heading">
 					<h3 class="panel-title"><a href="#list-agents" data-toggle="collapse"> Liste du personnel</a></h3>
 				</div>
-				<div class="panel-body panel-collapse collapse" id="list-agents">
+				<div class="panel-body panel-collapse collapse in" id="list-agents">
 					<table id="tbl-list-agents" class="table table-striped display" style="width:100%">
 						<thead>
 							<tr>
