--- a/src/main/resources/templates/affectation/frm-affectation.html
+++ b/src/main/resources/templates/affectation/frm-affectation.html
@@ -49,23 +49,15 @@
 
 <body>
     <div layout:fragment="content">
-        <div class="container-fluid">
-            <form id="frm-agent" th:action="@{/staffadmin/agents/save}" method="post" enctype="multipart/form-data" th:object="${agent}">
-                <div class="alert alert-danger col-lg-12 mb-3" th:if="${errorMsg}">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                    <strong>Erreur de saisie : </strong> 
-                    <div th:text="${errorMsg}"></div>
-                </div>
-                <th:block th:replace="agent/frm/infos-generales-frag.html::infos-generales-frag"></th:block>
-                <th:block th:replace="agent/frm/infos-emploi-frag.html::infos-emploi-frag"></th:block>
-<!--            <th:block th:replace="agent/frm/pieces-jointes-frag.html::pieces-jointes-frag"></th:block> -->
-                <th:block th:replace="agent/frm/confirmation-modal-frag.html::confirmation-modal-frag"></th:block>
-                <button class="btn btn-success mr-3" id="btn-modal-trigger" type="button" data-toggle="modal" href="#confirmation-modal">Valider</button>
-                <button class="btn btn-success mr-3" id="btn-valider" type="button">Valider btn</button>
-                <button class="btn btn-warning mr-3" id="btn-reset" type="reset">Reset</button>
-                <button type="submit" id="btn-submit" class="btn btn-success btn-lg">Save</button>
-            </form>
-        </div>
+    	<th:block th:if="${mode=='edition'}">
+    		<th:block th:replace="affectation/frm-affectation-frag.html::frm-affectation-frag"></th:block>
+    	</th:block>
+    	
+    	<th:block th:if="${mode=='confirmation'}">
+    		<th:block th:replace="affectation/frm-confirmation-affectation-frag.html::frm-confirmation-affectation-frag"></th:block>
+    	</th:block>    	
+    	
+        
     </div>
     <div layout:fragment="js-specifics-dependancies">
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -84,9 +76,9 @@
             });
 		}
 
-		formatDropDownBoxToSelect2("grade");
-		formatDropDownBoxToSelect2("emploi");
-		formatDropDownBoxToSelect2("fonction");
+		formatDropDownBoxToSelect2("uniteAdminDeDestination");
+		//formatDropDownBoxToSelect2("emploi");
+		//formatDropDownBoxToSelect2("fonction");
 		//formatDropDownBoxToSelect2("grade");
 
        	</script>
